--- a/style/global/global.scss
+++ b/style/global/global.scss
@@ -81,6 +81,11 @@ p {
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
     line-height: 1.2em;
+    font-size: 12pt;
+
+    @media(max-width: $mobile-breakpoint) {
+        font-size: 10pt;
+    }
 }
 
 a {
